# pqa

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  marketplace.json  pqa-config.example.toml  pyproject.toml
.agents/skills/pqa/: SKILL.md
.agents/skills/pqa/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude-plugin/: marketplace.json  plugin.json
.claude/homunculus/instincts/inherited/: pqa-instincts.yaml
.claude/research/: pqa-research-playbook.md
.codex/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  invariant.yml  mutation.yml  security.yml
agents/: pqa-adversary.md  pqa-baseline-runner.md  pqa-collapse-judge.md  pqa-conviction-arbiter.md  pqa-cost-governor.md  pqa-coverage-analyst.md  pqa-decomposer.md  pqa-divergence-auditor.md  pqa-eval-runner.md  pqa-failure-taxonomist.md  pqa-frame-loader.md  pqa-generator.md  pqa-go-brancher.md  pqa-harness-optimizer.md  pqa-human-perturbation.md  pqa-instinct-synthesizer.md  pqa-memory-curator.md  pqa-orchestrator.md  pqa-performance-adversary.md  pqa-python-brancher.md  pqa-reconciler.md  pqa-regression-sentinel.md  pqa-researcher.md  pqa-run-reporter.md  pqa-rust-brancher.md  pqa-security-adversary.md  pqa-self-reflector.md  pqa-spiral-coordinator.md  pqa-sql-brancher.md  pqa-systems-brancher.md  pqa-test-integrity-auditor.md  pqa-typescript-brancher.md  pqa-unknown-scout.md  pqa-verifier.md
commands/: attack.md  baseline.md  budget.md  collapse.md  cost.md  dashboard.md  decompose.md  diverge-check.md  eval.md  evolve.md  frame.md  human.md  install.md  instinct-export.md  instinct-import.md  instinct-status.md  memory.md  perturb.md  pqa.md  precipitate.md  reconcile.md  report.md  spiral.md  superpose.md  tune.md  unknown.md  verify.md
config/: settings.py
contexts/: dev.md  research.md  review.md  unknown.md
docs/: architecture.md  catalog.json
examples/: CLAUDE.md  phase0_demo.py  python-CLAUDE.md  rust-CLAUDE.md  typescript-CLAUDE.md
hooks/: hooks.json  precipitate_capture.py  research_gate.py  secrets_guard.py  security_gate.py  update_check.py  verify_loop.py
hooks/memory/: schema.sql
hooks/memory/migrations/: 001_initial.sql
mcp-configs/: mcp-servers.json
pqa/: __init__.py  baseline.py  collapse.py  collision.py  config.py  cost.py  divergence.py  frame.py  memory.py  migrations.py  orchestrator.py  report.py  sanitize.py  signals.py  superposition.py
rules/common/: evidence-over-eloquence.md  git-workflow.md  hunt-the-unknown.md  secrets.md  the-invariant.md
scripts/: check_invariant.py  dashboard.py  generate_components.py  install.sh  instincts.py  reconcile.sh  smoke_hooks.sh  spawn_branches.sh
skills/adversarial-collision/: SKILL.md
skills/api-design-divergence/: SKILL.md
skills/baseline-comparison/: SKILL.md
skills/bounded-exploration/: SKILL.md
skills/caching-strategies/: SKILL.md
skills/co-precipitation/: SKILL.md
skills/concurrency-divergence/: SKILL.md
skills/continuous-learning/: SKILL.md
skills/continuous-precipitation/: SKILL.md
skills/conviction-signalling/: SKILL.md
skills/cost-aware-pipeline/: SKILL.md
skills/coverage-as-confidence/: SKILL.md
skills/data-model-divergence/: SKILL.md
skills/deployment-patterns/: SKILL.md
skills/empirical-collapse/: SKILL.md
skills/error-handling-patterns/: SKILL.md
skills/eval-harness/: SKILL.md
skills/failure-taxonomy/: SKILL.md
skills/frame-contrast/: SKILL.md
skills/git-worktree-orchestration/: SKILL.md
skills/go-branch-patterns/: SKILL.md
skills/go-verification/: SKILL.md
skills/human-in-the-loop/: SKILL.md
skills/install-and-configure/: SKILL.md
skills/instinct-portability/: SKILL.md
skills/instinct-synthesis/: SKILL.md
skills/low-probability-exploration/: SKILL.md
skills/memory-retrieval/: SKILL.md
skills/migration-patterns/: SKILL.md
skills/mutation-testing/: SKILL.md
skills/observability-patterns/: SKILL.md
skills/performance-collision/: SKILL.md
skills/perturbation-operators/: SKILL.md
skills/precipitate-naming/: SKILL.md
skills/probability-mass-allocation/: SKILL.md
skills/python-branch-patterns/: SKILL.md
skills/python-verification/: SKILL.md
skills/regression-guarding/: SKILL.md
skills/relativity-operator/: SKILL.md
skills/reproducibility/: SKILL.md
skills/run-reporting/: SKILL.md
skills/rust-branch-patterns/: SKILL.md
skills/rust-verification/: SKILL.md
skills/search-first/: SKILL.md
skills/secrets-discipline/: SKILL.md
skills/security-collision/: SKILL.md
skills/self-understanding/: SKILL.md
skills/sql-branch-patterns/: SKILL.md
skills/sql-verification/: SKILL.md
skills/superposition-branching/: SKILL.md
skills/systems-branch-patterns/: SKILL.md
skills/systems-verification/: SKILL.md
skills/test-integrity/: SKILL.md
skills/the-spiral/: SKILL.md
skills/topological-divergence/: SKILL.md
skills/typescript-branch-patterns/: SKILL.md
skills/typescript-verification/: SKILL.md
skills/untrusted-research/: SKILL.md
skills/verification-loop/: SKILL.md
tests/: test_baseline.py  test_collapse.py  test_collision.py  test_config.py  test_cost.py  test_divergence.py  test_frame.py  test_memory.py  test_migrations.py  test_orchestrator.py  test_report.py  test_sanitize.py  test_security_hooks.py  test_signals.py  test_superposition.py  test_update_check.py
