[project]
name = "pqa"
version = "0.2.5"
description = "Passionate Quantum Absence — co-precipitation made executable for code."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Lucas Daish", email = "lucasdaish@outlook.com" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []  # the harness core is stdlib-only by design

# Managed with uv. Dependabot keeps these at latest.
[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.15",
    "pyright>=1.1.409",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
    "mutmut>=3.0",        # mutation testing — guards against tests that pass but assert nothing
]

# PQA distributes as a Claude Code plugin (see .claude-plugin/), not a pip package.
# uv treats this as a non-package project: dev tools install into .venv; the pqa/ engine
# imports directly from source via the pythonpath set under [tool.pytest.ini_options].
[tool.uv]
package = false

# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, SIM simplify,
# S flake8-bandit (security/SAST), PTH use-pathlib, RUF ruff-specific.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "S", "PTH", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S607"]       # assert + subprocess invocations are expected in tests
"scripts/generate_components.py" = [
    "E501",                                 # catalog of agent/skill/command descriptions — one entry per line
    "S101",                                 # sanity assertions on the catalog at the bottom of the file
]
"hooks/security_gate.py" = ["E501"]         # DANGEROUS regex table reads better one entry per line

[tool.ruff.lint.isort]
# Declare first-party packages explicitly. Without this, ruff classifies them
# by *disk presence* — so `from pqa.config import ...` is third-party until
# `pqa/config/` exists, then becomes first-party. That shifts where I001
# requires blank-line separators across worktrees and produces phantom
# lint failures on locked test files. Locking the classification keeps
# `ruff format` and `ruff check` in agreement.
known-first-party = ["pqa", "config", "hooks", "scripts"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ----------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["pqa", "config", "hooks", "scripts"]
reportMissingImports = true
reportUnknownMemberType = false

# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # import pqa/ directly (non-package project — see [tool.uv])
addopts = "-q --strict-markers --cov=pqa --cov-report=term-missing --cov-fail-under=80"
markers = ["integration: end-to-end tests against real git/test runners (excluded by default)"]

[tool.coverage.run]
branch = true
source = ["pqa"]
# All pqa/* modules are implemented; no scaffold omits remain.


[tool.coverage.report]
fail_under = 80
show_missing = true
